target/generated-sources/antlr4/unnamed/UnnamedParser.java
// Generated from UnnamedParser.g4 by ANTLR 4.4
package unnamed;

import unnamed.intermediate.*;
import unnamed.intermediate.symtabimpl.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UnnamedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MOD_OP=25, NE_OP=27, OR_OP=33, LOOP=2, SEMI=14, TERNARY_OP=20, COMMENT=37, 
		SUB_OP=24, IMPORT=1, RETURN=6, ADD_OP=23, ASSIGN_OP=18, ELSE=5, DIV_OP=22, 
		IDENTIFIER=38, WS=36, IF=4, COMMA=15, GT_OP=30, EQ_OP=26, NEWLINE=35, 
		LPAREN=10, DOT=17, GUARD_OP=19, LE_OP=29, FINAL=7, COLON=16, MUL_OP=21, 
		RPAREN=11, GE_OP=31, LT_OP=28, QUOT=9, RBRACE=13, FLOAT_LITERAL=40, NOT_OP=34, 
		WHILE=3, STRING_LITERAL=41, VOID=8, LBRACE=12, AND_OP=32, DECIMAL_LITERAL=39;
	public static final String[] tokenNames = {
		"<INVALID>", "'import'", "'loop'", "'while'", "'if'", "'else'", "'return'", 
		"'final'", "'void'", "'\"'", "'('", "')'", "'{'", "'}'", "';'", "','", 
		"':'", "'.'", "'='", "'|'", "'?'", "'*'", "'/'", "'+'", "'-'", "'%'", 
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "NEWLINE", 
		"WS", "COMMENT", "IDENTIFIER", "DECIMAL_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL"
	};
	public static final int
		RULE_program = 0, RULE_importDecleration = 1, RULE_block = 2, RULE_functionDeclaration = 3, 
		RULE_functionParamDeclaration = 4, RULE_variableDeclaration = 5, RULE_varList = 6, 
		RULE_varId = 7, RULE_typeId = 8, RULE_compoundStmt = 9, RULE_stmtList = 10, 
		RULE_stmt = 11, RULE_assignmentStmt = 12, RULE_loopStmt = 13, RULE_ifStmt = 14, 
		RULE_returnStmt = 15, RULE_functionStmt = 16, RULE_functionParams = 17, 
		RULE_variable = 18, RULE_expr = 19, RULE_sign = 20, RULE_constant = 21, 
		RULE_mulDivOp = 22, RULE_addSubOp = 23, RULE_relOp = 24, RULE_logOp = 25;
	public static final String[] ruleNames = {
		"program", "importDecleration", "block", "functionDeclaration", "functionParamDeclaration", 
		"variableDeclaration", "varList", "varId", "typeId", "compoundStmt", "stmtList", 
		"stmt", "assignmentStmt", "loopStmt", "ifStmt", "returnStmt", "functionStmt", 
		"functionParams", "variable", "expr", "sign", "constant", "mulDivOp", 
		"addSubOp", "relOp", "logOp"
	};

	@Override
	public String getGrammarFileName() { return "UnnamedParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UnnamedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ImportDeclerationContext importDecleration(int i) {
			return getRuleContext(ImportDeclerationContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ImportDeclerationContext> importDecleration() {
			return getRuleContexts(ImportDeclerationContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(52); importDecleration();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclerationContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(UnnamedParser.SEMI, 0); }
		public TerminalNode IMPORT() { return getToken(UnnamedParser.IMPORT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(UnnamedParser.IDENTIFIER, 0); }
		public ImportDeclerationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecleration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterImportDecleration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitImportDecleration(this);
		}
	}

	public final ImportDeclerationContext importDecleration() throws RecognitionException {
		ImportDeclerationContext _localctx = new ImportDeclerationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDecleration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(IMPORT);
			setState(61); match(IDENTIFIER);
			setState(62); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public boolean isMainBlock;
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public CompoundStmtContext compoundStmt() {
			return getRuleContext(CompoundStmtContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(UnnamedParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(UnnamedParser.SEMI, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FINAL || _la==IDENTIFIER) {
				{
				setState(68);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					{
					setState(64); variableDeclaration();
					setState(65); match(SEMI);
					}
					}
					break;
				case 2:
					{
					setState(67); functionDeclaration();
					}
					break;
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73); compoundStmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TypeIdContext typeId() {
			return getRuleContext(TypeIdContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(UnnamedParser.LPAREN, 0); }
		public TerminalNode COLON() { return getToken(UnnamedParser.COLON, 0); }
		public TerminalNode VOID() { return getToken(UnnamedParser.VOID, 0); }
		public TerminalNode RPAREN() { return getToken(UnnamedParser.RPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(UnnamedParser.IDENTIFIER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionParamDeclarationContext functionParamDeclaration() {
			return getRuleContext(FunctionParamDeclarationContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(IDENTIFIER);
			setState(76); match(COLON);
			setState(79);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(77); typeId();
				}
				break;
			case VOID:
				{
				setState(78); match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81); match(LPAREN);
			setState(83);
			_la = _input.LA(1);
			if (_la==FINAL || _la==IDENTIFIER) {
				{
				setState(82); functionParamDeclaration();
				}
			}

			setState(85); match(RPAREN);
			setState(86); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParamDeclarationContext extends ParserRuleContext {
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UnnamedParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UnnamedParser.COMMA, i);
		}
		public FunctionParamDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParamDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterFunctionParamDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitFunctionParamDeclaration(this);
		}
	}

	public final FunctionParamDeclarationContext functionParamDeclaration() throws RecognitionException {
		FunctionParamDeclarationContext _localctx = new FunctionParamDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionParamDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); variableDeclaration();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(89); match(COMMA);
				setState(90); variableDeclaration();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public ArrayList<SymTabEntry> symTabEntries;
		public TypeIdContext typeId() {
			return getRuleContext(TypeIdContext.class,0);
		}
		public TerminalNode FINAL() { return getToken(UnnamedParser.FINAL, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode COLON() { return getToken(UnnamedParser.COLON, 0); }
		public TerminalNode ASSIGN_OP() { return getToken(UnnamedParser.ASSIGN_OP, 0); }
		public VarListContext varList() {
			return getRuleContext(VarListContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if (_la==FINAL) {
				{
				setState(96); match(FINAL);
				}
			}

			setState(99); varList();
			setState(100); match(COLON);
			setState(101); typeId();
			setState(104);
			_la = _input.LA(1);
			if (_la==ASSIGN_OP) {
				{
				setState(102); match(ASSIGN_OP);
				setState(103); constant();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarListContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(UnnamedParser.COMMA); }
		public List<VarIdContext> varId() {
			return getRuleContexts(VarIdContext.class);
		}
		public VarIdContext varId(int i) {
			return getRuleContext(VarIdContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(UnnamedParser.COMMA, i);
		}
		public VarListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterVarList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitVarList(this);
		}
	}

	public final VarListContext varList() throws RecognitionException {
		VarListContext _localctx = new VarListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); varId();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(107); match(COMMA);
				setState(108); varId();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarIdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UnnamedParser.IDENTIFIER, 0); }
		public VarIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterVarId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitVarId(this);
		}
	}

	public final VarIdContext varId() throws RecognitionException {
		VarIdContext _localctx = new VarIdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeIdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UnnamedParser.IDENTIFIER, 0); }
		public TypeIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterTypeId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitTypeId(this);
		}
	}

	public final TypeIdContext typeId() throws RecognitionException {
		TypeIdContext _localctx = new TypeIdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompoundStmtContext extends ParserRuleContext {
		public TerminalNode RBRACE() { return getToken(UnnamedParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(UnnamedParser.LBRACE, 0); }
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public CompoundStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterCompoundStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitCompoundStmt(this);
		}
	}

	public final CompoundStmtContext compoundStmt() throws RecognitionException {
		CompoundStmtContext _localctx = new CompoundStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_compoundStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(LBRACE);
			setState(119); stmtList();
			setState(120); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtListContext extends ParserRuleContext {
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterStmtList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitStmtList(this);
		}
	}

	public final StmtListContext stmtList() throws RecognitionException {
		StmtListContext _localctx = new StmtListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stmtList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOOP) | (1L << IF) | (1L << RETURN) | (1L << LBRACE) | (1L << SEMI) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(122); stmt();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public CompoundStmtContext compoundStmt() {
			return getRuleContext(CompoundStmtContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(UnnamedParser.SEMI, 0); }
		public AssignmentStmtContext assignmentStmt() {
			return getRuleContext(AssignmentStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public LoopStmtContext loopStmt() {
			return getRuleContext(LoopStmtContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public FunctionStmtContext functionStmt() {
			return getRuleContext(FunctionStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_stmt);
		try {
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128); compoundStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129); assignmentStmt();
				setState(130); match(SEMI);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132); loopStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133); ifStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(134); returnStmt();
				setState(135); match(SEMI);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(137); functionStmt();
				setState(138); match(SEMI);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(140); match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentStmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ASSIGN_OP() { return getToken(UnnamedParser.ASSIGN_OP, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public AssignmentStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterAssignmentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitAssignmentStmt(this);
		}
	}

	public final AssignmentStmtContext assignmentStmt() throws RecognitionException {
		AssignmentStmtContext _localctx = new AssignmentStmtContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assignmentStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); variable();
			setState(144); match(ASSIGN_OP);
			setState(145); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopStmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LOOP() { return getToken(UnnamedParser.LOOP, 0); }
		public TerminalNode LPAREN() { return getToken(UnnamedParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(UnnamedParser.RPAREN, 0); }
		public TerminalNode WHILE() { return getToken(UnnamedParser.WHILE, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public LoopStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterLoopStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitLoopStmt(this);
		}
	}

	public final LoopStmtContext loopStmt() throws RecognitionException {
		LoopStmtContext _localctx = new LoopStmtContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_loopStmt);
		try {
			setState(161);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147); match(LOOP);
				setState(148); stmt();
				setState(149); match(WHILE);
				setState(150); match(LPAREN);
				setState(151); expr(0);
				setState(152); match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154); match(LOOP);
				setState(155); match(WHILE);
				setState(156); match(LPAREN);
				setState(157); expr(0);
				setState(158); match(RPAREN);
				setState(159); stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(UnnamedParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(UnnamedParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(UnnamedParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(UnnamedParser.RPAREN, 0); }
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnnamedParserListener ) ((UnnamedParserListener)listener).exitIfStmt(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_ifStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); match(IF);
			setState(164); match(LPAREN);
			setState(165); expr(0);
			setState(166); match(RPAREN);
			setState(167); stmt();
			setState(170);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(168); match(ELSE);
				setState(169); stmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStmtContext extends ParserRuleContext {
		public TypeSpec type;
		public TerminalNode RETURN() { return getToken(UnnamedParser.RETURN, 0); }
		public ExprContext expr() {
